Remove pd.read_csv error

--- a/notebooks/imdb_genre_trends_by_decade.ipynb
+++ b/notebooks/imdb_genre_trends_by_decade.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4b3b7b91",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=pd.errors.DtypeWarning)\n"
    ]
   },
   {
@@ -32,22 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ac970bc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ken55\\AppData\\Local\\Temp\\ipykernel_16620\\1736112115.py:2: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path, sep='\\t', na_values='\\\\N')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_path = '../data/title.basics.tsv.gz'  # Notebookからの相対パス\n",
-    "df = pd.read_csv(file_path, sep='\\t', na_values='\\\\N')\n"
+    "df = pd.read_csv(file_path, sep='\\t', na_values='\\\\N', low_memory=False)\n"
    ]
   },
   {
@@ -214,21 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "541ab998",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ken55\\AppData\\Local\\Temp\\ipykernel_16620\\4168944198.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  akas = pd.read_csv('../data/title.akas.tsv.gz', sep='\\t', na_values='\\\\N')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "akas = pd.read_csv('../data/title.akas.tsv.gz', sep='\\t', na_values='\\\\N')\n"
+    "akas = pd.read_csv('../data/title.akas.tsv.gz', sep='\\t', na_values='\\\\N', low_memory=False)\n"
    ]
   },
   {
